@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.8 (**tip**)
+* Fixed url generation to properly handle unicode defaults in addition to
+  unicode arguments.
 * Fixed url_for to handle lists as keyword args when generating query
   parameters.
 * WARNING: Changed map.resource to not use ';', for actions, but the
